--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "devDependencies": {
     "gh-pages": "^1.0.0",
     "neutrino": "^6.1.4",
-    "neutrino-preset-react": "^6.1.4"
+    "neutrino-preset-react": "^6.1.4",
+    "parse-diff": "^0.4.0"
   },
   "dependencies": {
     "react": "^15.6.1",
