--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://armenzg.github.io/code_cov_experiments",
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "neutrino start --use neutrino-preset-react",
     "build": "neutrino build --use neutrino-preset-react"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "neutrino": "^6.1.4",
     "neutrino-preset-react": "^6.1.4"
   },
