--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "parse-diff": "^0.4.0"
   },
   "dependencies": {
+    "form-serialize": "^0.7.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2"
