--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "homepage": "https://armenzg.github.io/code_cov_experiments",
+  "homepage": "https://firefox-code-coverage.herokuapp.com",
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "scripts": {
     "deploy": "gh-pages -d build",
     "start": "neutrino start --use neutrino-preset-react",
-    "build": "neutrino build --use neutrino-preset-react"
+    "build": "neutrino build --use neutrino-preset-react",
+    "prestart": "yarn install",
+    "heroku-prebuild": "yarn build"
   },
   "devDependencies": {
-    "gh-pages": "^1.0.0",
-    "neutrino": "^6.1.4",
-    "neutrino-preset-react": "^6.1.4"
+    "gh-pages": "^1.0.0"
   },
   "dependencies": {
     "form-serialize": "^0.7.2",
+    "neutrino": "^6.1.5",
+    "neutrino-preset-react": "^6.1.4",
     "parse-diff": "^0.4.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
