--- a/app.json
+++ b/app.json
@@ -1,16 +1,27 @@
 {
   "name": "firefox-code-coverage-frontend",
   "description": "A frontend to show code coverage data",
+  "repository": "https://github.com/armenzg/firefox-code-coverage-frontend",
+  "website": "https://firefox-code-coverage.herokuapp.com",
   "scripts": {
   },
   "env": {
   },
   "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "standard-1x"
+    }
   },
   "addons": [
 
   ],
   "buildpacks": [
-
+    {
+      "url": "heroku/nodejs"
+    },
+    {
+      "url": "https://github.com/hone/heroku-buildpack-static"
+    }
   ]
 }
