--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "yarn": ">=1.0.0"
   },
   "scripts": {
-    "start": "neutrino start",
-    "build": "neutrino build",
-    "lint": "neutrino lint",
-    "neutrino-dependencies": "yarn add neutrino neutrino-preset-mozilla-rpweb",
-    "prestart": "yarn neutrino-dependencies && yarn install",
-    "test": "yarn lint && yarn build",
-    "heroku-prebuild": "yarn neutrino-dependencies && yarn build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint": "./node_modules/.bin/eslint src/",
+    "heroku-prebuild": "yarn install && yarn build"
   },
   "dependencies": {
     "form-serialize": "^0.7.2",
@@ -20,14 +19,17 @@
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "react-scripts": "1.0.13"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.54.1",
-    "neutrino": "^6.2.0",
-    "neutrino-preset-mozilla-rpweb": "^4.2.0",
-    "neutrino-preset-react": "^6.2.0"
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
+    "flow-bin": "^0.54.1"
   }
 }
