--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-interval": "^2.0.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.13"
   },
