--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "form-serialize": "^0.7.2",
+    "lodash": "^4.17.4",
     "parse-diff": "^0.4.0",
     "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
