--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "heroku-prebuild": "yarn install && yarn build"
   },
   "dependencies": {
+    "chroma-js": "^1.3.4",
     "form-serialize": "^0.7.2",
     "lodash": "^4.17.4",
     "parse-diff": "^0.4.0",
