--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 {
   "name": "firefox-code-coverage-frontend",
   "description": "A frontend to show code coverage data",
-  "repository": "https://github.com/armenzg/firefox-code-coverage-frontend",
+  "repository": "https://github.com/mozilla/firefox-code-coverage-frontend",
   "website": "https://firefox-code-coverage.herokuapp.com",
   "scripts": {
   },
   "env": {
+    "NPM_CONFIG_PRODUCTION": "false"
   },
   "formation": {
     "web": {
@@ -21,7 +22,7 @@
       "url": "heroku/nodejs"
     },
     {
-      "url": "https://github.com/hone/heroku-buildpack-static"
+      "url": "https://github.com/heroku/heroku-buildpack-static"
     }
   ]
 }
