--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "homepage": "https://firefox-code-coverage.herokuapp.com",
+  "version": "1.0.0",
+  "main": "index.jsx",
+  "author": "Armen Zambrano G. <armenzg@mozilla.com>",
+  "repository": "git@github.com:mozilla/firefox-code-coverage-frontend.git",
   "engines": {
     "node": ">=6.0.0",
     "npm": ">=5.0.0",
     "yarn": ">=1.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "./node_modules/.bin/eslint src/",
-    "heroku-prebuild": "yarn install && yarn build"
+    "build": "neutrino build",
+    "start": "neutrino start",
+    "lint": "neutrino lint",
+    "heroku-postbuild": "neutrino build"
   },
   "dependencies": {
     "chroma-js": "^1.3.4",
@@ -20,13 +22,15 @@
     "parse-diff": "^0.4.0",
     "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
     "react-interval": "^2.0.2",
-    "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.15"
+    "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
+    "@neutrinojs/airbnb": "^8.1.1",
+    "@neutrinojs/react": "^8.1.1",
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
     "eslint": "^4.7.2",
@@ -34,6 +38,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
-    "flow-bin": "^0.54.1"
+    "flow-bin": "^0.54.1",
+    "neutrino": "^8.1.1"
   }
 }
