--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-interval": "^2.0.2",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "table-link": "^1.2.9"
   },
   "devDependencies": {
     "@neutrinojs/airbnb": "^8.1.1",
