--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "build": "neutrino build",
     "start": "neutrino start",
     "lint": "neutrino lint",
+    "precommit": "lint-staged",
     "heroku-postbuild": "neutrino build"
+  },
+  "lint-staged": {
+    "*.js": [
+      "neutrino lint"
+    ]
   },
   "dependencies": {
     "chroma-js": "^1.3.4",
@@ -39,6 +45,8 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
     "flow-bin": "^0.54.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.0",
     "neutrino": "^8.1.1"
   }
 }
