--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
   "dependencies": {
     "chroma-js": "^1.3.4",
     "form-serialize": "^0.7.2",
+    "localforage": ">=1.0",
     "lodash": "^4.17.4",
     "parse-diff": "^0.4.2",
     "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
+    "raven-js": "^3.23.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-interval": "^2.0.2",
-    "react-router-dom": "^4.1.2",
-    "localforage": ">=1.0"
+    "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
     "@neutrinojs/airbnb": "^8.1.1",
