--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "yarn": ">=1.0.0"
   },
   "scripts": {
+    "test": "nyc neutrino test",
+    "watch": "NODE_ENV=testing mocha --watch",
     "build": "neutrino build",
     "start": "neutrino start",
     "lint": "neutrino lint",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@neutrinojs/airbnb": "^8.1.1",
+    "@neutrinojs/mocha": "8.0.18",
     "@neutrinojs/react": "^8.1.1",
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
@@ -49,6 +52,7 @@
     "flow-bin": "^0.54.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
-    "neutrino": "^8.1.1"
+    "neutrino": "^8.1.1",
+    "nyc": "^11.6.0"
   }
 }
