WIP Issue #132 - Add some tests for the utils modules
Addressed initial feedback, removed unnecessary flags and empty tests.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "nyc neutrino test",
-    "watch": "NODE_ENV=testing mocha --watch",
+    "watch": "NODE_ENV=testing mocha",
     "build": "neutrino build",
     "start": "neutrino start",
     "lint": "neutrino lint",
