--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-interval": "^2.0.2",
-    "react-router-dom": "^4.1.2"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.1.2",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "@neutrinojs/airbnb": "^8.1.1",
