--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
-dist: trusty
+dist: xenial
 language: node_js
 cache: yarn
 node_js:
 - '8'
+- '--lts'
 install:
 - yarn install --frozen-lockfile
-before_install:
-- curl -sSfL https://yarnpkg.com/install.sh | bash # Required due to: https://github.com/travis-ci/travis-ci/issues/7951
-- export PATH=$HOME/.yarn/bin:$PATH
 after_failure:
 - yarn build -- --inspect
 script:
